--- a/latest_ai_development/src/latest_ai_development/config/agents.yaml
+++ b/latest_ai_development/src/latest_ai_development/config/agents.yaml
@@ -1,3 +1,12 @@
+pdf_to_txt:
+  role: >
+    PDF to text
+  goal: >
+    Extract the words from the pdf file and turn it into a txt file.
+  backstory: >
+    You are a detail-oriented agent that grabs the all of the text from the pdf file.
+  llm: groq/llama-3.1-8b-instant
+
 reader_summarizer:
   role: >
     {topic} Summarizer
@@ -6,6 +15,7 @@ reader_summarizer:
   backstory: >
     You are a detail-oriented researcher with a talent for distilling vast amounts of information into clear, structured summaries. 
     Your ability to highlight crucial findings helps researchers and professionals quickly grasp essential knowledge.
+  llm: groq/llama-3.1-8b-instant
 
 quote_finder:
   role: >
@@ -15,6 +25,7 @@ quote_finder:
   backstory: >
     You are an expert in textual analysis, capable of pinpointing precise, meaningful excerpts that best capture the essence of a study. 
     Your selections serve as the foundation for insightful discussions and further analysis.
+  llm: groq/llama-3.1-8b-instant
 
 quote_rater:
   role: >
@@ -23,6 +34,7 @@ quote_rater:
     Evaluate the relevance, clarity, and impact of extracted quotes, rating them from 1 to 10 based on their usefulness and credibility.
   backstory: >
     With a sharp analytical mind and deep understanding of academic rigor, you assess the quality of quotes to ensure only the most valuable insights are retained. Your scoring system ensures that only the most relevant and insightful quotes make it through to the next stage.
+  llm: groq/llama-3.1-8b-instant
 
 final_editor:
   role: >
@@ -32,3 +44,4 @@ final_editor:
   backstory: >
     As the final arbiter of impactful research communication, you carefully review and refine selected quotes, ensuring they maintain 
     integrity while enhancing readability. By filtering out lower-rated excerpts and organizing them by relevance, you guarantee that only the most precise and insightful quotes are used.
+  llm: groq/llama-3.1-8b-instant
