--- a/latest_ai_development/src/latest_ai_development/config/tasks.yaml
+++ b/latest_ai_development/src/latest_ai_development/config/tasks.yaml
@@ -1,9 +1,9 @@
-pdf_to_txt:
+pdf_to_txt_task:
   description: >
-    Turn this pdf into a txt file.
+    Turn this pdf {file_path} into a txt file.
   expected_output: >
     The exact text from the pdf.
-  agent: pdf_to_txt
+  agent: pdf_to_txt # this one
 
 summary_task:
   description: >
@@ -13,6 +13,9 @@ summary_task:
     A well-organized summary covering the main points, key findings, and essential takeaways 
     from the research papers, formatted in markdown.
   agent: reader_summarizer
+  context: 
+    - pdf_to_txt_task
+  
 
 quote_extraction_task:
   description: >
@@ -21,6 +24,8 @@ quote_extraction_task:
   expected_output: >
     A list of 10-15 key quotes with proper attribution.
   agent: quote_finder
+  context: 
+    - pdf_to_txt_task
 
 quote_rating_task:
   description: >
