--- a/latest_ai_development/src/latest_ai_development/config/tasks.yaml
+++ b/latest_ai_development/src/latest_ai_development/config/tasks.yaml
@@ -1,36 +1,37 @@
 pdf_to_txt_task:
   description: >
-    Turn this pdf {file_path} into a txt file.
+    Extract and return all the text content from the PDF file located at {file_path}.
   expected_output: >
-    The exact text from the pdf.
-  agent: pdf_to_txt # this one
+    A string containing the full extracted text from the PDF file. This should be a clean and accurate representation of the document content, with all readable text included.
+  agent: pdf_to_txt
 
 summary_task:
   description: >
-    Read and analyze this research paper, then extract key insights 
-    related to {topic} and summarize them in a structured and concise format.
+    Summarize the content of the research paper that was extracted in the previous task.
+    Focus on key insights, main arguments, and findings. Return it in structured markdown format.
   expected_output: >
     A well-organized summary covering the main points, key findings, and essential takeaways 
     from the research papers, formatted in markdown.
-  agent: reader_summarizer
-  context: 
+  context:
     - pdf_to_txt_task
+  agent: reader_summarizer
   
 
 quote_extraction_task:
   description: >
-    Identify and extract the most relevant and impactful quotes from research papers related to {topic}.
-    Focus on quotes that clearly convey important findings or arguments.
+    Identify 10-15 impactful quotes from the research paper content extracted earlier.
+    These quotes should highlight important findings or compelling arguments related to {topic}.
+
   expected_output: >
     A list of 10-15 key quotes with proper attribution.
-  agent: quote_finder
-  context: 
+  context:
     - pdf_to_txt_task
+  agent: quote_finder
 
 quote_rating_task:
   description: >
     Evaluate the relevance, clarity, and impact of the extracted quotes.
-    Assign each quote a rating from 1 to 10 based on its usefulness, clarity, and credibility.
+    Before each quote, assign a rating from 1 to 10 based on its usefulness, clarity, and credibility.
   expected_output: >
     A list of rated quotes, each with its respective score (1-10).
   context:
